--- a/translations/validators.fr.yml
+++ b/translations/validators.fr.yml
@@ -9,3 +9,6 @@ place:
 
 dates:
     start_before_end: La date de début doit être plus petite ou égale à la date de fin
+
+user:
+    unknown: Le nom d'utilisateur doit être connu
